// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (typedef-whitespace) /src/tslint/typedef-whitespace/test.ts[1, 6]: expected nospace before colon in variable-declaration

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
let x : string;

======
let x: string;

>>>>>> after
"
`;
